--- a/notebooks/dev/database.ipynb
+++ b/notebooks/dev/database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,48 +30,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyodbc\n",
-      "  Downloading pyodbc-5.1.0-cp39-cp39-win_amd64.whl.metadata (2.8 kB)\n",
-      "Downloading pyodbc-5.1.0-cp39-cp39-win_amd64.whl (68 kB)\n",
-      "   ---------------------------------------- 0.0/68.8 kB ? eta -:--:--\n",
-      "   ----- ---------------------------------- 10.2/68.8 kB ? eta -:--:--\n",
-      "   ----------------- ---------------------- 30.7/68.8 kB 325.1 kB/s eta 0:00:01\n",
-      "   ---------------------------------------- 68.8/68.8 kB 468.4 kB/s eta 0:00:00\n",
-      "Installing collected packages: pyodbc\n",
-      "Successfully installed pyodbc-5.1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pyodbc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['SQL Server', 'Microsoft Access Driver (*.mdb, *.accdb)', 'Microsoft Excel Driver (*.xls, *.xlsx, *.xlsm, *.xlsb)', 'Microsoft Access Text Driver (*.txt, *.csv)', 'ODBC Driver 18 for SQL Server']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pyodbc.drivers())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -90,11 +48,11 @@
     "\n",
     "# Define the connection string\n",
     "conn_str = (\n",
-    "    r'DRIVER={ODBC Driver 18 for SQL Server};'\n",
-    "    r'SERVER=tcp:dev-sql-eastus-001.database.windows.net,1433;'\n",
-    "    r'DATABASE=dev-sql-server;'  # replace with your database name\n",
-    "    r'UID=admin_test;'\n",
-    "    r'PWD=Djpepinodemar3$;'\n",
+    "    r\"DRIVER={ODBC Driver 18 for SQL Server};\"\n",
+    "    r\"SERVER=tcp:dev-sql-eastus-001.database.windows.net,1433;\"\n",
+    "    r\"DATABASE=dev-sql-server;\"  # replace with your database name\n",
+    "    r\"UID=admin_test;\"\n",
+    "    r\"PWD=Djpepinodemar3$;\"\n",
     ")\n",
     "\n",
     "# Establish a connection to the database\n",
@@ -526,15 +484,15 @@
     "import json\n",
     "\n",
     "# Open the JSON file\n",
-    "with open('tests\\\\validation\\\\querys.jsonl', 'r') as file:\n",
+    "with open(\"tests\\\\validation\\\\querys.jsonl\", \"r\") as file:\n",
     "    # Load the JSON object from the file\n",
     "    data = json.load(file)\n",
     "\n",
     "    # Iterate over each query in the queries list\n",
-    "    for query in data['queries']:\n",
+    "    for query in data[\"queries\"]:\n",
     "        # Extract the sql_query and natural_language_query from the query\n",
-    "        sql_query = query['sql_query']\n",
-    "        natural_language_query = query['natural_language_query']\n",
+    "        sql_query = query[\"sql_query\"]\n",
+    "        natural_language_query = query[\"natural_language_query\"]\n",
     "\n",
     "        # Execute the sql_query and get the result\n",
     "        result = execute_query(conn, sql_query)\n",
@@ -543,17 +501,17 @@
     "        result_list = [row[0] for row in result]\n",
     "\n",
     "        # Print the natural_language_query and sql_query\n",
-    "        print(f'Natural Language Query: {natural_language_query}')\n",
-    "        print(f'SQL Query: {sql_query}')\n",
+    "        print(f\"Natural Language Query: {natural_language_query}\")\n",
+    "        print(f\"SQL Query: {sql_query}\")\n",
     "\n",
     "        # Check if the result matches the one in the JSON file\n",
-    "        if result_list == query['results']:\n",
-    "            print('The results match.')\n",
+    "        if result_list == query[\"results\"]:\n",
+    "            print(\"The results match.\")\n",
     "        else:\n",
-    "            print('The results do not match.')\n",
+    "            print(\"The results do not match.\")\n",
     "\n",
     "        # Print a separator for readability\n",
-    "        print('-' * 60)"
+    "        print(\"-\" * 60)"
    ]
   }
  ],
