--- a/01-creation-indexes.ipynb
+++ b/01-creation-indexes.ipynb
@@ -91,7 +91,7 @@
     ")\n",
     "\n",
     "# Define the target directory (change yours)\n",
-    "target_directory = r\"C:\\Users\\pablosal\\Desktop\\gbbai-azure-ai-document-intelligence\"\n",
+    "target_directory = r\"C:\\Users\\pablosal\\Desktop\\gbbai-chat-with-your-database\"\n",
     "\n",
     "# Check if the directory exists\n",
     "if os.path.exists(target_directory):\n",
@@ -120,12 +120,6 @@
     "admin_documents_index_client = SearchIndexClient(\n",
     "    endpoint=endpoint,\n",
     "    index_name=os.environ[\"AZURE_SEARCH_INDEX_NAME_DOCUMENTS\"],\n",
-    "    credential=AzureKeyCredential(os.environ[\"AZURE_SEARCH_ADMIN_KEY\"]),\n",
-    ")\n",
-    "\n",
-    "admin_audio_image_index_client = SearchIndexClient(\n",
-    "    endpoint=endpoint,\n",
-    "    index_name=os.environ[\"AZURE_SEARCH_INDEX_NAME_IMAGES_AND_AUDIO\"],\n",
     "    credential=AzureKeyCredential(os.environ[\"AZURE_SEARCH_ADMIN_KEY\"]),\n",
     ")"
    ]
@@ -180,11 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fields_audio_images_index = [\n",
+    "fields_query_index = [\n",
     "    # The 'document_id' field serves as a unique identifier for each document.\n",
     "    # It's a string, marked as a key, and is sortable, filterable, and facetable for efficient querying.\n",
     "    SimpleField(\n",
@@ -195,46 +189,18 @@
     "        filterable=True,\n",
     "        facetable=True,\n",
     "    ),\n",
-    "    # The 'document_title' field holds the title of the document.\n",
-    "    # It is searchable, meaning it's indexed for full-text search.\n",
-    "    SearchableField(name=\"document_title\", type=SearchFieldDataType.String),\n",
-    "    # The 'document_summary' field contains a brief overview of the document.\n",
-    "    # This field is also searchable.\n",
-    "    SearchableField(name=\"document_summary\", type=SearchFieldDataType.String),\n",
+    "    SearchableField(name=\"table_content\", type=SearchFieldDataType.String),\n",
     "    # The 'document_content' field stores the full content of the document.\n",
     "    # It's searchable for detailed text queries.\n",
-    "    SearchableField(name=\"document_content\", type=SearchFieldDataType.String),\n",
-    "    # The 'document_content' field stores the full content of the document.\n",
-    "    # It's searchable for detailed text queries.\n",
-    "    SimpleField(name=\"document_category\", type=SearchFieldDataType.String),\n",
+    "    SimpleField(name=\"table_name\", type=SearchFieldDataType.String),\n",
     "    # The 'summary_vector' field is a vector representation of the document summary.\n",
     "    # It's used for semantic search and configured with specific dimensions and a search profile.\n",
     "    SearchField(\n",
-    "        name=\"summary_vector\",\n",
+    "        name=\"table_vector\",\n",
     "        type=SearchFieldDataType.Collection(SearchFieldDataType.Single),\n",
     "        searchable=True,\n",
     "        vector_search_dimensions=1536,\n",
     "        vector_search_profile_name=\"myHnswProfile\",\n",
-    "    ),\n",
-    "    # The 'content_vector' field is a vector representation of the document content, similar to 'summary_vector',\n",
-    "    # and is configured for semantic search capabilities.\n",
-    "    SearchField(\n",
-    "        name=\"content_vector\",\n",
-    "        type=SearchFieldDataType.Collection(SearchFieldDataType.Single),\n",
-    "        searchable=True,\n",
-    "        vector_search_dimensions=1536,\n",
-    "        vector_search_profile_name=\"myHnswProfile\",\n",
-    "    ),\n",
-    "    # The 'document_permission' is a complex field that represents a collection of permissions at the document level.\n",
-    "    # Each entity in this collection is identified by 'list_item'.\n",
-    "    ComplexField(\n",
-    "        name=\"document_permission\",\n",
-    "        collection=True,\n",
-    "        fields=[\n",
-    "            SimpleField(\n",
-    "                name=\"list_item\", type=SearchFieldDataType.String, filterable=True\n",
-    "            )\n",
-    "        ],\n",
     "    ),\n",
     "]"
    ]
@@ -308,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,21 +339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "semantic_config_audio_images_index = SemanticConfiguration(\n",
-    "    name=\"audio-images-index-semantic-config\",\n",
+    "semantic_config_query_index = SemanticConfiguration(\n",
+    "    name=\"query-index-semantic-config\",\n",
     "    prioritized_fields=SemanticPrioritizedFields(\n",
-    "        title_field=SemanticField(field_name=\"document_title\"),\n",
-    "        keywords_fields=[SemanticField(field_name=\"document_category\")],\n",
-    "        content_fields=[SemanticField(field_name=\"document_content\")],\n",
+    "        title_field=SemanticField(field_name=\"table_name\"),\n",
+    "        keywords_fields=[SemanticField(field_name=\"table_name\")],\n",
+    "        content_fields=[SemanticField(field_name=\"table_content\")],\n",
     "    ),\n",
     ")\n",
     "# Create the semantic settings with the configuration\n",
     "semantic_search_audio_images = SemanticSearch(\n",
-    "    configurations=[semantic_config_audio_images_index]\n",
+    "    configurations=[semantic_config_query_index]\n",
     ")"
    ]
   },
@@ -407,106 +373,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index images-audio-index-dev created\n"
+      "Index query-dev-index created\n"
      ]
     }
    ],
    "source": [
     "index = SearchIndex(\n",
-    "    name=os.environ[\"AZURE_SEARCH_INDEX_NAME_IMAGES_AND_AUDIO\"],\n",
-    "    fields=fields_audio_images_index,\n",
+    "    name=\"query-dev-index\",\n",
+    "    fields=fields_query_index,\n",
     "    vector_search=vector_search,\n",
     "    semantic_search=semantic_search_audio_images,\n",
-    ")\n",
-    "\n",
-    "try:\n",
-    "    result = admin_audio_image_index_client.create_or_update_index(index)\n",
-    "    print(\"Index\", result.name, \"created\")\n",
-    "except Exception as ex:\n",
-    "    print(ex)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creating the Documents Index\n",
-    "\n",
-    "> Adapting the Process to Suit our logic for Document Indexing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fields_documents_index = [\n",
-    "    SimpleField(\n",
-    "        name=\"id\",\n",
-    "        type=SearchFieldDataType.String,\n",
-    "        key=True,\n",
-    "        sortable=True,\n",
-    "        filterable=True,\n",
-    "        facetable=True,\n",
-    "    ),\n",
-    "    SearchableField(name=\"content\", type=SearchFieldDataType.String, searchable=True),\n",
-    "    SearchField(\n",
-    "        name=\"content_vector\",\n",
-    "        type=SearchFieldDataType.Collection(SearchFieldDataType.Single),\n",
-    "        searchable=True,\n",
-    "        vector_search_dimensions=1536,\n",
-    "        vector_search_profile_name=\"myHnswProfile\",\n",
-    "    ),\n",
-    "    SearchableField(name=\"metadata\", type=SearchFieldDataType.String, searchable=True),\n",
-    "    SimpleField(name=\"source_url\", type=SearchFieldDataType.String, filterable=True),\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "semantic_config_docs_index = SemanticConfiguration(\n",
-    "    name=\"documents-index-semantic-config\",\n",
-    "    prioritized_fields=SemanticPrioritizedFields(\n",
-    "        title_field=SemanticField(field_name=\"content\"),\n",
-    "        keywords_fields=[SemanticField(field_name=\"metadata\")],\n",
-    "        content_fields=[SemanticField(field_name=\"content\")],\n",
-    "    ),\n",
-    ")\n",
-    "# Create the semantic settings with the configuration\n",
-    "semantic_search_docs = SemanticSearch(configurations=[semantic_config_docs_index])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index test-index-002 created\n"
-     ]
-    }
-   ],
-   "source": [
-    "index = SearchIndex(\n",
-    "    name=\"test-index-002\",\n",
-    "    fields=fields_documents_index,\n",
-    "    vector_search=vector_search,\n",
-    "    semantic_search=semantic_search_docs,\n",
     ")\n",
     "\n",
     "try:\n",
