--- a/notebooks/dev/database.ipynb
+++ b/notebooks/dev/database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,244 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.database.azuresql import AzureSQLManager\n",
+    "\n",
+    "DATABASE = \"dev-sql-server\"\n",
+    "az_sql_client = AzureSQLManager(DATABASE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = az_sql_client.execute_and_fetch(\n",
+    "    \"\"\"SELECT name\n",
+    "    FROM expanded_detroit_tigers_baseball_stats\n",
+    "    WHERE position = 'INF'\n",
+    "    AND RBIs > 50\n",
+    "    AND Walks > 80\n",
+    "    AND Batting_Average < 0.250;\"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Player162',), ('Player197',), ('Player282',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = az_sql_client.execute(\n",
+    "    \"\"\"SELECT TOP (1000) *\n",
+    "    FROM dbo.expanded_detroit_tigers_baseball_stats\"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_name = \"expanded_detroit_tigers_baseball_stats\"\n",
+    "query = \"\"\"SELECT TOP (1000) * FROM dbo.{}\"\"\".format(table_name)\n",
+    "a = az_sql_client.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables_names = az_sql_client.get_table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['detroit_tigers_baseball_stats', 'expanded_detroit_tigers_baseball_stats']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tables_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables_names = az_sql_client.get_table_names()\n",
+    "schema = az_sql_client.process_schema(tables_names[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.aoai.azure_openai import AzureOpenAIManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az_client = AzureOpenAIManager()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_message = \"\"\"You are an AI assistant that helps people find information.  Act as a Senior Database Engineer, capable of understanding complex \n",
+    "relationships between fields and tables. Your task involves interpreting and analyzing \n",
+    "the schema of SQL database tables provided in JSON format. You examine the structure,\n",
+    "understand the purpose of each field, and identify the interconnections between fields. \n",
+    "Your objective is to produce a comprehensive summary that elucidates the table's design\n",
+    "and its potential applications. This summary should highlight the table's intended use, \n",
+    "emphasizing the key data it contains. Your expertise is essential for demystifying the \n",
+    "navigation and optimization of complex database systems, facilitating users to comprehend\n",
+    "the significance and operational context of their data assets efficiently. Take your time.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = f\"\"\"\n",
+    "Please examine the schema of the table thoroughly. Provide an in-depth analysis that not only explains the design and structure of the table but also outlines its potential applications and the types of queries it can support.\n",
+    "Also provide atleast 10 queries in natural lengauge that can be run on the table.\n",
+    "Please take your time.\n",
+    "\n",
+    "Here is the schema of the table: {schema}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-07 00:37:50,081 - micro - MainProcess - INFO     Sending request to OpenAI with query: \n",
+      "Please examine the schema of the table thoroughly. Provide an in-depth analysis that not only explains the design and structure of the table but also outlines its potential applications and the types of queries it can support.\n",
+      "Also provide atleast 10 queries in natural lengauge that can be run on the table.\n",
+      "Please take your time.\n",
+      "\n",
+      "Here is the schema of the table: {'detroit_tigers_baseball_stats': [{'column_number': 0, 'column_name': 'name', 'data_type': 'nvarchar'}, {'column_number': 1, 'column_name': 'position', 'data_type': 'nvarchar'}, {'column_number': 2, 'column_name': 'Games_Played', 'data_type': 'tinyint'}, {'column_number': 3, 'column_name': 'At_Bats', 'data_type': 'smallint'}, {'column_number': 4, 'column_name': 'Hits', 'data_type': 'tinyint'}, {'column_number': 5, 'column_name': 'Home_Runs', 'data_type': 'tinyint'}, {'column_number': 6, 'column_name': 'RBIs', 'data_type': 'tinyint'}, {'column_number': 7, 'column_name': 'Batting_Average', 'data_type': 'float'}]}\n",
+      " (azure_openai.py:generate_chat_response:189)\n",
+      "2024-02-07 00:38:31,494 - micro - MainProcess - INFO     Received response from OpenAI: The provided schema is for a table named 'detroit_tigers_baseball_stats', which likely stores statistical data related to the players of the Detroit Tigers, a professional baseball team. The table has eight columns, each with a distinct purpose.\n",
+      "\n",
+      "1. 'name' (nvarchar): This field presumably stores the name of each player. The nvarchar data type suggests the names could be of variable length and may include Unicode characters.\n",
+      "\n",
+      "2. 'position' (nvarchar): This field likely refers to the player's position in the game. Again, the nvarchar data type allows for variable length strings with Unicode characters.\n",
+      "\n",
+      "3. 'Games_Played' (tinyint): This field appears to track the number of games each player has participated in. The use of the tinyint data type suggests the number of games won't exceed 255.\n",
+      "\n",
+      "4. 'At_Bats' (smallint): This column is likely used to store the number of times a player has been at bat. The smallint data type indicates a maximum value of 32,767.\n",
+      "\n",
+      "5. 'Hits' (tinyint): This records the number of hits by a player. The maximum value allowed by the tinyint data type is 255.\n",
+      "\n",
+      "6. 'Home_Runs' (tinyint): This column tracks the number of home runs a player has hit. The maximum value is 255.\n",
+      "\n",
+      "7. 'RBIs' (tinyint): This stands for \"Runs Batted In\" and measures the number of times a player has batted in a run. The maximum value is 255.\n",
+      "\n",
+      "8. 'Batting_Average' (float): This is a key performance metric in baseball, calculated as total hits divided by at bats. The float data type allows for decimal precision.\n",
+      "\n",
+      "Potential applications of this table could include tracking player performance, comparing player stats, identifying key players, forecasting future performance, among other uses related to sports analytics.\n",
+      "\n",
+      "Here are ten queries that could be run on this table in natural language:\n",
+      "\n",
+      "1. Who is the player with the highest number of games played?\n",
+      "2. What is the average number of home runs hit by players?\n",
+      "3. Who are the top 5 players with the highest batting average?\n",
+      "4. How many players have a batting average above 0.300?\n",
+      "5. What is the total number of RBIs for all players?\n",
+      "6. Who is the player with the least number of at bats?\n",
+      "7. Which position has the highest average number of hits?\n",
+      "8. What is the total number of games played by all players?\n",
+      "9. Who are the players with more than 100 at bats?\n",
+      "10. What is the average, minimum, and maximum 'At_Bats' value for all players? (azure_openai.py:generate_chat_response:202)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The provided schema is for a table named \\'detroit_tigers_baseball_stats\\', which likely stores statistical data related to the players of the Detroit Tigers, a professional baseball team. The table has eight columns, each with a distinct purpose.\\n\\n1. \\'name\\' (nvarchar): This field presumably stores the name of each player. The nvarchar data type suggests the names could be of variable length and may include Unicode characters.\\n\\n2. \\'position\\' (nvarchar): This field likely refers to the player\\'s position in the game. Again, the nvarchar data type allows for variable length strings with Unicode characters.\\n\\n3. \\'Games_Played\\' (tinyint): This field appears to track the number of games each player has participated in. The use of the tinyint data type suggests the number of games won\\'t exceed 255.\\n\\n4. \\'At_Bats\\' (smallint): This column is likely used to store the number of times a player has been at bat. The smallint data type indicates a maximum value of 32,767.\\n\\n5. \\'Hits\\' (tinyint): This records the number of hits by a player. The maximum value allowed by the tinyint data type is 255.\\n\\n6. \\'Home_Runs\\' (tinyint): This column tracks the number of home runs a player has hit. The maximum value is 255.\\n\\n7. \\'RBIs\\' (tinyint): This stands for \"Runs Batted In\" and measures the number of times a player has batted in a run. The maximum value is 255.\\n\\n8. \\'Batting_Average\\' (float): This is a key performance metric in baseball, calculated as total hits divided by at bats. The float data type allows for decimal precision.\\n\\nPotential applications of this table could include tracking player performance, comparing player stats, identifying key players, forecasting future performance, among other uses related to sports analytics.\\n\\nHere are ten queries that could be run on this table in natural language:\\n\\n1. Who is the player with the highest number of games played?\\n2. What is the average number of home runs hit by players?\\n3. Who are the top 5 players with the highest batting average?\\n4. How many players have a batting average above 0.300?\\n5. What is the total number of RBIs for all players?\\n6. Who is the player with the least number of at bats?\\n7. Which position has the highest average number of hits?\\n8. What is the total number of games played by all players?\\n9. Who are the players with more than 100 at bats?\\n10. What is the average, minimum, and maximum \\'At_Bats\\' value for all players?'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "az_client.generate_chat_response(\n",
+    "    conversation_history=[],\n",
+    "    query=query,\n",
+    "    system_message_content=system_message,\n",
+    "    max_tokens=1000,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
